--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <p>i am coding and coding</p>
     <p>your name is shouvik</p>
     <p>i am happy</p>
+    <img src="features.jpg" alt="">
+    <img src="IMG_8296.JPG" alt="">
+    <img src="sabbr.jpg" alt="">
 </body>
 </html>
