--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <img src="features.jpg" alt="">
     <img src="IMG_8296.JPG" alt="">
     <img src="sabbr.jpg" alt="">
+    <img src="images/IMAG3180.jpg" alt="">
 </body>
 </html>
